--- a/Displays/ImageViewers/ImageViewer.html
+++ b/Displays/ImageViewers/ImageViewer.html
@@ -361,18 +361,23 @@ class ImageViewer(QMdiSubWindow):
                 mousePoint = container.getViewBox().mapSceneToView(pos) 
                 x_i = math.floor(mousePoint.x())
                 y_i = math.floor(mousePoint.y()) 
+                #correct the y coordinate value so that it has a value
+                #of 0 at the bottom left corner of the image rather than
+                #at the top left corner of the image
+                _, nY = self.pixelArray.shape
+                correctedYCoord = nY -  y_i
                 z_i =  imageNumber
                 if ((len(np.shape(self.pixelArray)) == 2) 
                     and y_i &gt;= 0 and y_i &lt; self.pixelArray.shape [ 1 ] 
                     and x_i &gt;= 0 and x_i &lt; self.pixelArray.shape [ 0 ]): 
                         self.lblPixelValue.setText(
-                        &#34;&lt;h4&gt; {} @ X: {}, Y: {}, Z: {} ({})&lt;/h4&gt;&#34;.format (self.pixelArray[ x_i, y_i ],x_i, y_i, z_i, ReadDICOM_Image.getImageTagValue(self.selectedImagePath, &#34;SliceLocation&#34;)))
+                        &#34;&lt;h4&gt; {} @ X: {}, Y: {}, Z: {} ({})&lt;/h4&gt;&#34;.format (self.pixelArray[ x_i, y_i ],x_i, correctedYCoord, z_i, ReadDICOM_Image.getImageTagValue(self.selectedImagePath, &#34;SliceLocation&#34;)))
                 elif ((len(np.shape(self.pixelArray)) == 3) 
                         and x_i &gt;= 0 and x_i &lt; self.pixelArray.shape [ 1 ] 
                         and y_i &gt;= 0 and y_i &lt; self.pixelArray.shape [ 2 ]):
                             z_i = math.floor(self.graphicsView.timeIndex(self.graphicsView.timeLine)[1])
                             self.lblPixelValue.setText(
-                                &#34;&lt;h4&gt; {} @ X: {}, Y: {}, Z: {} ({})&lt;/h4&gt;&#34;.format (self.pixelArray[ x_i, y_i ],x_i, y_i, z_i, ReadDICOM_Image.getImageTagValue(self.selectedImagePath, &#34;SliceLocation&#34;)))
+                                &#34;&lt;h4&gt; {} @ X: {}, Y: {}, Z: {} ({})&lt;/h4&gt;&#34;.format (self.pixelArray[ x_i, y_i ],x_i, correctedYCoord, z_i, ReadDICOM_Image.getImageTagValue(self.selectedImagePath, &#34;SliceLocation&#34;)))
                 else:
                     self.lblPixelValue.setText(&#34;&#34;)
             else:
@@ -1386,18 +1391,23 @@ sliders for browsing series of images.</p></div>
                 mousePoint = container.getViewBox().mapSceneToView(pos) 
                 x_i = math.floor(mousePoint.x())
                 y_i = math.floor(mousePoint.y()) 
+                #correct the y coordinate value so that it has a value
+                #of 0 at the bottom left corner of the image rather than
+                #at the top left corner of the image
+                _, nY = self.pixelArray.shape
+                correctedYCoord = nY -  y_i
                 z_i =  imageNumber
                 if ((len(np.shape(self.pixelArray)) == 2) 
                     and y_i &gt;= 0 and y_i &lt; self.pixelArray.shape [ 1 ] 
                     and x_i &gt;= 0 and x_i &lt; self.pixelArray.shape [ 0 ]): 
                         self.lblPixelValue.setText(
-                        &#34;&lt;h4&gt; {} @ X: {}, Y: {}, Z: {} ({})&lt;/h4&gt;&#34;.format (self.pixelArray[ x_i, y_i ],x_i, y_i, z_i, ReadDICOM_Image.getImageTagValue(self.selectedImagePath, &#34;SliceLocation&#34;)))
+                        &#34;&lt;h4&gt; {} @ X: {}, Y: {}, Z: {} ({})&lt;/h4&gt;&#34;.format (self.pixelArray[ x_i, y_i ],x_i, correctedYCoord, z_i, ReadDICOM_Image.getImageTagValue(self.selectedImagePath, &#34;SliceLocation&#34;)))
                 elif ((len(np.shape(self.pixelArray)) == 3) 
                         and x_i &gt;= 0 and x_i &lt; self.pixelArray.shape [ 1 ] 
                         and y_i &gt;= 0 and y_i &lt; self.pixelArray.shape [ 2 ]):
                             z_i = math.floor(self.graphicsView.timeIndex(self.graphicsView.timeLine)[1])
                             self.lblPixelValue.setText(
-                                &#34;&lt;h4&gt; {} @ X: {}, Y: {}, Z: {} ({})&lt;/h4&gt;&#34;.format (self.pixelArray[ x_i, y_i ],x_i, y_i, z_i, ReadDICOM_Image.getImageTagValue(self.selectedImagePath, &#34;SliceLocation&#34;)))
+                                &#34;&lt;h4&gt; {} @ X: {}, Y: {}, Z: {} ({})&lt;/h4&gt;&#34;.format (self.pixelArray[ x_i, y_i ],x_i, correctedYCoord, z_i, ReadDICOM_Image.getImageTagValue(self.selectedImagePath, &#34;SliceLocation&#34;)))
                 else:
                     self.lblPixelValue.setText(&#34;&#34;)
             else:
@@ -2708,18 +2718,23 @@ lblPixelValue.</p></div>
             mousePoint = container.getViewBox().mapSceneToView(pos) 
             x_i = math.floor(mousePoint.x())
             y_i = math.floor(mousePoint.y()) 
+            #correct the y coordinate value so that it has a value
+            #of 0 at the bottom left corner of the image rather than
+            #at the top left corner of the image
+            _, nY = self.pixelArray.shape
+            correctedYCoord = nY -  y_i
             z_i =  imageNumber
             if ((len(np.shape(self.pixelArray)) == 2) 
                 and y_i &gt;= 0 and y_i &lt; self.pixelArray.shape [ 1 ] 
                 and x_i &gt;= 0 and x_i &lt; self.pixelArray.shape [ 0 ]): 
                     self.lblPixelValue.setText(
-                    &#34;&lt;h4&gt; {} @ X: {}, Y: {}, Z: {} ({})&lt;/h4&gt;&#34;.format (self.pixelArray[ x_i, y_i ],x_i, y_i, z_i, ReadDICOM_Image.getImageTagValue(self.selectedImagePath, &#34;SliceLocation&#34;)))
+                    &#34;&lt;h4&gt; {} @ X: {}, Y: {}, Z: {} ({})&lt;/h4&gt;&#34;.format (self.pixelArray[ x_i, y_i ],x_i, correctedYCoord, z_i, ReadDICOM_Image.getImageTagValue(self.selectedImagePath, &#34;SliceLocation&#34;)))
             elif ((len(np.shape(self.pixelArray)) == 3) 
                     and x_i &gt;= 0 and x_i &lt; self.pixelArray.shape [ 1 ] 
                     and y_i &gt;= 0 and y_i &lt; self.pixelArray.shape [ 2 ]):
                         z_i = math.floor(self.graphicsView.timeIndex(self.graphicsView.timeLine)[1])
                         self.lblPixelValue.setText(
-                            &#34;&lt;h4&gt; {} @ X: {}, Y: {}, Z: {} ({})&lt;/h4&gt;&#34;.format (self.pixelArray[ x_i, y_i ],x_i, y_i, z_i, ReadDICOM_Image.getImageTagValue(self.selectedImagePath, &#34;SliceLocation&#34;)))
+                            &#34;&lt;h4&gt; {} @ X: {}, Y: {}, Z: {} ({})&lt;/h4&gt;&#34;.format (self.pixelArray[ x_i, y_i ],x_i, correctedYCoord, z_i, ReadDICOM_Image.getImageTagValue(self.selectedImagePath, &#34;SliceLocation&#34;)))
             else:
                 self.lblPixelValue.setText(&#34;&#34;)
         else:
