--- a/CoreModules/XNATapp.html
+++ b/CoreModules/XNATapp.html
@@ -38,7 +38,7 @@ def isEnabled(self):
 
 def download(objWeasel):
     # Insert Try/Except
-    credentialsWindow = {&#34;URL&#34;:&#34;string,https://test-ukrin.dpuk.org&#34;, &#34;Username&#34;:&#34;string,j.sousa&#34;, &#34;Password&#34;:&#34;string&#34;}
+    credentialsWindow = {&#34;URL&#34;:&#34;string,https://test-ukrin.dpuk.org&#34;, &#34;Username&#34;:&#34;string,your.xnat.username&#34;, &#34;Password&#34;:&#34;string&#34;}
     info = &#34;Please insert the XNAT URL and your XNAT credentials&#34;
     loginDetails = objWeasel.inputWindow(credentialsWindow, title=&#34;XNAT Login&#34;, helpText=info)
     if loginDetails is None: return
@@ -106,7 +106,7 @@ def download(objWeasel):
 
 def upload(objWeasel):
     # Insert Try/Except
-    credentialsWindow = {&#34;URL&#34;:&#34;string,https://test-ukrin.dpuk.org&#34;, &#34;Username&#34;:&#34;string,j.sousa&#34;, &#34;Password&#34;:&#34;string&#34;}
+    credentialsWindow = {&#34;URL&#34;:&#34;string,https://test-ukrin.dpuk.org&#34;, &#34;Username&#34;:&#34;string,your.xnat.username&#34;, &#34;Password&#34;:&#34;string&#34;}
     info = &#34;Please insert the XNAT URL and your XNAT credentials&#34;
     loginDetails = objWeasel.inputWindow(credentialsWindow, title=&#34;XNAT Login&#34;, helpText=info)
     if loginDetails is None: return
@@ -226,7 +226,7 @@ def zipFiles(listPaths):
 </summary>
 <pre><code class="python">def download(objWeasel):
     # Insert Try/Except
-    credentialsWindow = {&#34;URL&#34;:&#34;string,https://test-ukrin.dpuk.org&#34;, &#34;Username&#34;:&#34;string,j.sousa&#34;, &#34;Password&#34;:&#34;string&#34;}
+    credentialsWindow = {&#34;URL&#34;:&#34;string,https://test-ukrin.dpuk.org&#34;, &#34;Username&#34;:&#34;string,your.xnat.username&#34;, &#34;Password&#34;:&#34;string&#34;}
     info = &#34;Please insert the XNAT URL and your XNAT credentials&#34;
     loginDetails = objWeasel.inputWindow(credentialsWindow, title=&#34;XNAT Login&#34;, helpText=info)
     if loginDetails is None: return
@@ -357,7 +357,7 @@ def zipFiles(listPaths):
 </summary>
 <pre><code class="python">def upload(objWeasel):
     # Insert Try/Except
-    credentialsWindow = {&#34;URL&#34;:&#34;string,https://test-ukrin.dpuk.org&#34;, &#34;Username&#34;:&#34;string,j.sousa&#34;, &#34;Password&#34;:&#34;string&#34;}
+    credentialsWindow = {&#34;URL&#34;:&#34;string,https://test-ukrin.dpuk.org&#34;, &#34;Username&#34;:&#34;string,your.xnat.username&#34;, &#34;Password&#34;:&#34;string&#34;}
     info = &#34;Please insert the XNAT URL and your XNAT credentials&#34;
     loginDetails = objWeasel.inputWindow(credentialsWindow, title=&#34;XNAT Login&#34;, helpText=info)
     if loginDetails is None: return
