--- a/Displays/ImageViewers/ImageViewerROI.html
+++ b/Displays/ImageViewers/ImageViewerROI.html
@@ -243,7 +243,8 @@ class ImageViewerROI(QMdiSubWindow):
             maskList = [np.transpose(np.array(mask, dtype=np.int)) for mask in maskList]
             suffix = str(&#34;_ROI_&#34;+ regionName)
             if len(maskList) &gt; 1:
-                inputPath = [i.path for i in self.weasel.images()]
+                #inputPath = [i.path for i in self.weasel.images()]
+                inputPath = self.imagePathList 
             else:
                 inputPath = [self.selectedImagePath]
             # Saving Progress message
@@ -256,9 +257,13 @@ class ImageViewerROI(QMdiSubWindow):
                 self.weasel.progressBar.set_value(index)
                 outputPath = SaveDICOM_Image.returnFilePath(path, suffix)
                 SaveDICOM_Image.saveNewSingleDicomImage(outputPath, path, maskList[index], suffix, series_id=seriesID, series_uid=seriesUID, parametric_map=&#34;SEG&#34;)
+                if &#34;philips&#34; in ReadDICOM_Image.getImageTagValue(outputPath, &#34;Manufacturer&#34;).lower():
+                    slope = ReadDICOM_Image.getImageTagValue(outputPath, &#34;RescaleSlope&#34;)
+                    SaveDICOM_Image.overwriteDicomFileTag(outputPath, (0x2005, 0x100E), 1/slope) #[(0x2005, 0x100E)]
+                self.weasel.objXMLReader.insertNewImageInXMLFile(path, outputPath, suffix)
             self.weasel.progressBar.set_value(len(inputPath))
             self.weasel.progressBar.close()
-            self.weasel.treeView.refreshDICOMStudiesTreeView()
+            self.weasel.refresh()
             QMessageBox.information(self.weasel, &#34;Export ROIs&#34;, &#34;Image Saved&#34;)
         except Exception as e:
             print(&#39;Error in ImageViewerROI.saveROI: &#39; + str(e))
@@ -285,8 +290,8 @@ class ImageViewerROI(QMdiSubWindow):
                 seriesID = listParams[0][0] # Temporary, only the first ROI
                 imagePathList = self.weasel.objXMLReader.getImagePathList(self.subjectID, self.studyID, seriesID)
                 if self.weasel.series != []:
-                    targetPath = [i.path for i in self.weasel.images()]
-                    #targetPath = self.imageList
+                    #targetPath = [i.path for i in self.weasel.images()]
+                    targetPath = self.imagePathList
                 else:
                     targetPath = [self.selectedImagePath]
                 maskInput = ReadDICOM_Image.returnSeriesPixelArray(imagePathList)
@@ -362,6 +367,7 @@ class ImageViewerROI(QMdiSubWindow):
                 #mask = graphicsView.dictROIs.getMask(region, 1)
                 #graphicsView.graphicsItem.reloadMask(mask)
                 self.cmbNamesROIs.setCurrentIndex(self.cmbNamesROIs.count() - 1)
+                self.reloadImageInNewImageItem()
         except Exception as e:
                 print(&#39;Error in ImageViewerROI.loadROI: &#39; + str(e))
                 logger.exception(&#39;Error in ImageViewerROI.loadROI: &#39; + str(e)) 
@@ -1158,7 +1164,8 @@ sliders for browsing series of images.</p></div>
             maskList = [np.transpose(np.array(mask, dtype=np.int)) for mask in maskList]
             suffix = str(&#34;_ROI_&#34;+ regionName)
             if len(maskList) &gt; 1:
-                inputPath = [i.path for i in self.weasel.images()]
+                #inputPath = [i.path for i in self.weasel.images()]
+                inputPath = self.imagePathList 
             else:
                 inputPath = [self.selectedImagePath]
             # Saving Progress message
@@ -1171,9 +1178,13 @@ sliders for browsing series of images.</p></div>
                 self.weasel.progressBar.set_value(index)
                 outputPath = SaveDICOM_Image.returnFilePath(path, suffix)
                 SaveDICOM_Image.saveNewSingleDicomImage(outputPath, path, maskList[index], suffix, series_id=seriesID, series_uid=seriesUID, parametric_map=&#34;SEG&#34;)
+                if &#34;philips&#34; in ReadDICOM_Image.getImageTagValue(outputPath, &#34;Manufacturer&#34;).lower():
+                    slope = ReadDICOM_Image.getImageTagValue(outputPath, &#34;RescaleSlope&#34;)
+                    SaveDICOM_Image.overwriteDicomFileTag(outputPath, (0x2005, 0x100E), 1/slope) #[(0x2005, 0x100E)]
+                self.weasel.objXMLReader.insertNewImageInXMLFile(path, outputPath, suffix)
             self.weasel.progressBar.set_value(len(inputPath))
             self.weasel.progressBar.close()
-            self.weasel.treeView.refreshDICOMStudiesTreeView()
+            self.weasel.refresh()
             QMessageBox.information(self.weasel, &#34;Export ROIs&#34;, &#34;Image Saved&#34;)
         except Exception as e:
             print(&#39;Error in ImageViewerROI.saveROI: &#39; + str(e))
@@ -1200,8 +1211,8 @@ sliders for browsing series of images.</p></div>
                 seriesID = listParams[0][0] # Temporary, only the first ROI
                 imagePathList = self.weasel.objXMLReader.getImagePathList(self.subjectID, self.studyID, seriesID)
                 if self.weasel.series != []:
-                    targetPath = [i.path for i in self.weasel.images()]
-                    #targetPath = self.imageList
+                    #targetPath = [i.path for i in self.weasel.images()]
+                    targetPath = self.imagePathList
                 else:
                     targetPath = [self.selectedImagePath]
                 maskInput = ReadDICOM_Image.returnSeriesPixelArray(imagePathList)
@@ -1277,6 +1288,7 @@ sliders for browsing series of images.</p></div>
                 #mask = graphicsView.dictROIs.getMask(region, 1)
                 #graphicsView.graphicsItem.reloadMask(mask)
                 self.cmbNamesROIs.setCurrentIndex(self.cmbNamesROIs.count() - 1)
+                self.reloadImageInNewImageItem()
         except Exception as e:
                 print(&#39;Error in ImageViewerROI.loadROI: &#39; + str(e))
                 logger.exception(&#39;Error in ImageViewerROI.loadROI: &#39; + str(e)) 
@@ -2235,8 +2247,8 @@ Also, sets the contrast and intensity in the associated histogram.</p></div>
             seriesID = listParams[0][0] # Temporary, only the first ROI
             imagePathList = self.weasel.objXMLReader.getImagePathList(self.subjectID, self.studyID, seriesID)
             if self.weasel.series != []:
-                targetPath = [i.path for i in self.weasel.images()]
-                #targetPath = self.imageList
+                #targetPath = [i.path for i in self.weasel.images()]
+                targetPath = self.imagePathList
             else:
                 targetPath = [self.selectedImagePath]
             maskInput = ReadDICOM_Image.returnSeriesPixelArray(imagePathList)
@@ -2312,6 +2324,7 @@ Also, sets the contrast and intensity in the associated histogram.</p></div>
             #mask = graphicsView.dictROIs.getMask(region, 1)
             #graphicsView.graphicsItem.reloadMask(mask)
             self.cmbNamesROIs.setCurrentIndex(self.cmbNamesROIs.count() - 1)
+            self.reloadImageInNewImageItem()
     except Exception as e:
             print(&#39;Error in ImageViewerROI.loadROI: &#39; + str(e))
             logger.exception(&#39;Error in ImageViewerROI.loadROI: &#39; + str(e)) </code></pre>
@@ -2444,7 +2457,8 @@ Also, sets the contrast and intensity in the associated histogram.</p></div>
         maskList = [np.transpose(np.array(mask, dtype=np.int)) for mask in maskList]
         suffix = str(&#34;_ROI_&#34;+ regionName)
         if len(maskList) &gt; 1:
-            inputPath = [i.path for i in self.weasel.images()]
+            #inputPath = [i.path for i in self.weasel.images()]
+            inputPath = self.imagePathList 
         else:
             inputPath = [self.selectedImagePath]
         # Saving Progress message
@@ -2457,9 +2471,13 @@ Also, sets the contrast and intensity in the associated histogram.</p></div>
             self.weasel.progressBar.set_value(index)
             outputPath = SaveDICOM_Image.returnFilePath(path, suffix)
             SaveDICOM_Image.saveNewSingleDicomImage(outputPath, path, maskList[index], suffix, series_id=seriesID, series_uid=seriesUID, parametric_map=&#34;SEG&#34;)
+            if &#34;philips&#34; in ReadDICOM_Image.getImageTagValue(outputPath, &#34;Manufacturer&#34;).lower():
+                slope = ReadDICOM_Image.getImageTagValue(outputPath, &#34;RescaleSlope&#34;)
+                SaveDICOM_Image.overwriteDicomFileTag(outputPath, (0x2005, 0x100E), 1/slope) #[(0x2005, 0x100E)]
+            self.weasel.objXMLReader.insertNewImageInXMLFile(path, outputPath, suffix)
         self.weasel.progressBar.set_value(len(inputPath))
         self.weasel.progressBar.close()
-        self.weasel.treeView.refreshDICOMStudiesTreeView()
+        self.weasel.refresh()
         QMessageBox.information(self.weasel, &#34;Export ROIs&#34;, &#34;Image Saved&#34;)
     except Exception as e:
         print(&#39;Error in ImageViewerROI.saveROI: &#39; + str(e))
