--- a/DICOM/ReadDICOM_Image.html
+++ b/DICOM/ReadDICOM_Image.html
@@ -344,7 +344,10 @@ def getPixelArray(dataset):
             else:
                 slope = float(getattr(dataset, &#39;RescaleSlope&#39;, 1)) * np.ones(dataset.pixel_array.shape)
                 intercept = float(getattr(dataset, &#39;RescaleIntercept&#39;, 0)) * np.ones(dataset.pixel_array.shape)
-                pixelArray = np.transpose(dataset.pixel_array.astype(np.float32) * slope + intercept)
+                if len(dataset.pixel_array.shape) == 3:
+                    pixelArray = np.rot90(np.array(dataset.pixel_array.astype(np.float32) * slope + intercept), k=1, axes=(0, 1))
+                else:
+                    pixelArray = np.transpose(dataset.pixel_array.astype(np.float32) * slope + intercept)
             if [0x2005, 0x100E] in dataset: # &#39;Philips Rescale Slope&#39;
                 pixelArray = pixelArray / (slope * dataset[(0x2005, 0x100E)].value)
             del slope, intercept
@@ -1075,7 +1078,10 @@ Output is : attribute</p></div>
             else:
                 slope = float(getattr(dataset, &#39;RescaleSlope&#39;, 1)) * np.ones(dataset.pixel_array.shape)
                 intercept = float(getattr(dataset, &#39;RescaleIntercept&#39;, 0)) * np.ones(dataset.pixel_array.shape)
-                pixelArray = np.transpose(dataset.pixel_array.astype(np.float32) * slope + intercept)
+                if len(dataset.pixel_array.shape) == 3:
+                    pixelArray = np.rot90(np.array(dataset.pixel_array.astype(np.float32) * slope + intercept), k=1, axes=(0, 1))
+                else:
+                    pixelArray = np.transpose(dataset.pixel_array.astype(np.float32) * slope + intercept)
             if [0x2005, 0x100E] in dataset: # &#39;Philips Rescale Slope&#39;
                 pixelArray = pixelArray / (slope * dataset[(0x2005, 0x100E)].value)
             del slope, intercept
